deployment/ansible/files/calc-app-deployment.k8s.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: calc-app

  labels:

    app: calc-app

spec:

  replicas: 1

  selector:

    matchLabels:

      app: calc-app

  template:

    metadata:

      labels:

        app: calc-app

    spec:

      containers:

        - name: calc-app

          image: shlomokallner613/bank-leumi-entrance-exam-calc:latest

          ports:

            - containerPort: 80
          
          limits:
