deployment/ansible/files/calc-app-service.k8s.yaml
---
apiVersion: v1

kind: Service

metadata:

  name: calc-app
  annotations:
    

  labels:

    app: calc-app

spec:

  type: NodePort

  selector:
    app.kubernetes.io/name: calc-app
    app: calc-app

  ports:

  - port: 80
    protocol: TCP
    targetPort: 80
    # # Optional field
    # # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
    # nodePort: 30007
